--- a/Makefile.old
+++ b/Makefile.old
@@ -1,4 +1,3 @@
-# To enable parallel builds, run: make -jN (e.g., make -j8)
 
 # ======================================================
 # INC-Engine Makefile
@@ -29,7 +28,7 @@ CC = g++
 # - Automatically include all subdirectories of engine/
 # - Include SDL2, GLAD, stb_image, and nlohmann
 
-CFLAGS = -std=c++17 -O2 -m64 \
+CFLAGS = -std=c++17 -m64 \
 	$(addprefix -I, $(shell find engine -type d)) \
 	-I$(SDL2_INCLUDE) \
 	-I$(GLAD_INCLUDE) \
@@ -45,8 +44,8 @@ LDFLAGS = -mconsole -lmingw32 -L$(SDL2_LIB) -lSDL2main -lSDL2 -lopengl32
 # -------------------------------
 # Source Files
 # -------------------------------
-# Updated: Engine.cpp moved to root
-SRC = engine/engine.cpp \
+# Add all .cpp files in engine folders and GLAD loader
+SRC = $(wildcard engine/src/*.cpp) \
       $(wildcard engine/HUD/*.cpp) \
       $(wildcard engine/Console/*.cpp) \
       $(wildcard engine/Fonts/*.cpp) \
@@ -93,4 +92,3 @@ postbuild:
 # -------------------------------
 clean:
 	rm -f bin/*.exe
-.PHONY: all clean
