--- a/Makefile.Win64
+++ b/Makefile.Win64
@@ -1,6 +1,6 @@
 CXX = g++
 CXXFLAGS = -std=c++17 -Wall -Wextra -g
-LINKFLAGS = -static-libstdc++ -static-libgcc
+LINKFLAGS = -static-libstdc++ -static-libgcc -Lbin -lmathlib
 
 # Shared global includes
 GLOBAL_INCLUDES = -Isrc -Isrc/thirdparty/nlohmann/include -Isrc/public
@@ -12,6 +12,8 @@ ENGINE_INCLUDES = $(GLOBAL_INCLUDES) \
                   -Isrc/thirdparty/sdl2/include/SDL2 \
                   -Isrc/thirdparty/glad/include \
                   -Isrc/thirdparty/vulkan/Include
+				  
+MATHLIB_INCLUDES = $(GLOBAL_INCLUDES) -Isrc/mathlib
 
 FILESYSTEM_INCLUDES = $(GLOBAL_INCLUDES) -Isrc/filesystem
 GAME_INCLUDES = $(GLOBAL_INCLUDES)  # Added game includes same as global
@@ -24,7 +26,7 @@ $(shell mkdir -p $(BIN_DIR))
 FILESYSTEM_SRC = $(shell find src/filesystem -name "*.cpp")
 ENGINE_SRC = $(shell find src/engine -name "*.cpp") \
              $(shell find src/thirdparty/glad/src -name "*.c")
-
+MATHLIB_SRC = $(shell find src/mathlib -name "*.cpp")
 LAUNCHER_SRC = $(shell find src/launcher -name "*.cpp")
 GAME_SRC = $(shell find src/game -name "*.cpp")  # Added game sources
 
@@ -35,13 +37,14 @@ ENGINE_OBJ = \
     $(patsubst src/engine/%.cpp, $(BIN_DIR)/engine/%.o, $(filter %.cpp, $(ENGINE_SRC))) \
     $(patsubst src/engine/%.c,   $(BIN_DIR)/engine/%.o, $(filter %.c,   $(ENGINE_SRC)))
 
-
+MATHLIB_OBJ = $(patsubst src/mathlib/%.cpp, $(BIN_DIR)/mathlib/%.o, $(MATHLIB_SRC))
 LAUNCHER_OBJ = $(patsubst src/launcher/%.cpp, $(BIN_DIR)/launcher/%.o, $(LAUNCHER_SRC))
 GAME_OBJ = $(patsubst src/game/%.cpp, $(BIN_DIR)/game/%.o, $(GAME_SRC))  # Added game objects
 
 # Create directories for all .o files before compiling
 $(shell mkdir -p $(sort $(dir $(FILESYSTEM_OBJ))))
 $(shell mkdir -p $(sort $(dir $(ENGINE_OBJ))))
+$(shell mkdir -p $(sort $(dir $(MATHLIB_OBJ))))
 $(shell mkdir -p $(sort $(dir $(LAUNCHER_OBJ))))
 $(shell mkdir -p $(sort $(dir $(GAME_OBJ))))  # Added game dirs
 $(shell mkdir -p $(BIN_DIR))
@@ -60,13 +63,16 @@ $(BIN_DIR)/engine/%.o: src/engine/%.cpp
 $(BIN_DIR)/glad_%.o: src/thirdparty/glad/src/%.c
 	$(CXX) $(CXXFLAGS) $(ENGINE_INCLUDES) -c $< -o $@
 
+$(BIN_DIR)/mathlib/%.o: src/mathlib/%.cpp
+	$(CXX) $(CXXFLAGS) $(MATHLIB_INCLUDES) -c $< -o $@
+
 $(BIN_DIR)/game/%.o: src/game/%.cpp   # Added compile rule for game
 	$(CXX) $(CXXFLAGS) $(GAME_INCLUDES) -c $< -o $@
 
 # Targets
-all: INC.exe $(BIN_DIR)/engine.dll $(BIN_DIR)/filesystem_stdio.dll $(BIN_DIR)/game.dll  # Added game.dll to all
+all: INC.exe $(BIN_DIR)/libmathlib.a $(BIN_DIR)/engine.dll $(BIN_DIR)/filesystem_stdio.dll $(BIN_DIR)/game.dll
 
-$(BIN_DIR)/engine.dll: $(ENGINE_OBJ)
+$(BIN_DIR)/engine.dll: $(ENGINE_OBJ) $(BIN_DIR)/libmathlib.a
 	$(CXX) -shared -o $@ $^ \
 		$(ENGINE_INCLUDES) $(LINKFLAGS) \
 		-lopengl32 \
@@ -75,11 +81,14 @@ $(BIN_DIR)/engine.dll: $(ENGINE_OBJ)
 
 $(BIN_DIR)/filesystem_stdio.dll: $(FILESYSTEM_OBJ)
 	$(CXX) -shared -o $@ $^ $(FILESYSTEM_INCLUDES) $(LINKFLAGS)
+	
+$(BIN_DIR)/libmathlib.a: $(MATHLIB_OBJ)
+	ar rcs $@ $^
 
-$(BIN_DIR)/game.dll: $(GAME_OBJ)  # Added game.dll target
+$(BIN_DIR)/game.dll: $(GAME_OBJ) $(BIN_DIR)/libmathlib.a
 	$(CXX) -shared -o $@ $^ $(GAME_INCLUDES) $(LINKFLAGS)
 
-INC.exe: $(LAUNCHER_OBJ)
+INC.exe: $(LAUNCHER_OBJ) $(BIN_DIR)/libmathlib.a
 	$(CXX) -o $@ $^ $(LAUNCHER_INCLUDES) $(LINKFLAGS)
 
 clean:
